--- a/day5/notebooks/Day5_Morning_Genomics.html
+++ b/day5/notebooks/Day5_Morning_Genomics.html
@@ -7615,7 +7615,7 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>Steps to download the reference genome and index it - we are going to use the human reference genome hg19.  This is an older version - but frankly I know it works for this data because I've used this exercise before.  We then have to tell the sequence aligner to "index" the reference - this assembles a file from the full reference sequence that allows the aligner to quickly place the reads correctly.</p>
-<p>The data is large and the indexing takes a while, so we have already done this for you.</p>
+<p>The data is large and the indexing takes a while, so we have already done this for you. Aka this is the day5_index on the server.</p>
 </div>
 </div>
 </div>
